compiling_error.txt
In file included from /home/yz/XLATTICE/xlattice.h:29:0,
                 from /home/yz/XLATTICE/test.cc:1:
/home/yz/XLATTICE/unary.h:75:76: error: ‘N’ was not declared in this scope
 inline auto real(const Lattice<T> &lat) -> Lattice<decltype(real(lat[0])), N>
                                                                            ^
/home/yz/XLATTICE/unary.h:75:77: error: wrong number of template arguments (2, should be 1)
 inline auto real(const Lattice<T> &lat) -> Lattice<decltype(real(lat[0])), N>
                                                                             ^
In file included from /home/yz/XLATTICE/xlattice.h:26:0,
                 from /home/yz/XLATTICE/test.cc:1:
/home/yz/XLATTICE/lattice.h:5:7: note: provided for ‘template<class T> class Lattice’
 class Lattice{
       ^~~~~~~
In file included from /home/yz/XLATTICE/xlattice.h:29:0,
                 from /home/yz/XLATTICE/test.cc:1:
/home/yz/XLATTICE/unary.h:83:47: error: template argument 1 is invalid
 inline auto real(const Field<T>& U) -> Field<(decltype(real(U[0][0])))>
                                               ^~~~~~~~
/home/yz/XLATTICE/unary.h:83:47: error: template argument 1 is invalid
/home/yz/XLATTICE/unary.h:83:47: error: template argument 1 is invalid
/home/yz/XLATTICE/unary.h:83:47: error: template argument 1 is invalid
/home/yz/XLATTICE/unary.h:83:47: error: template argument 1 is invalid
/home/yz/XLATTICE/unary.h:83:40: error: invalid use of template-name ‘Field’ without an argument list
 inline auto real(const Field<T>& U) -> Field<(decltype(real(U[0][0])))>
                                        ^~~~~
/home/yz/XLATTICE/unary.h:83:40: note: class template argument deduction is only available with -std=c++1z or -std=gnu++1z
In file included from /home/yz/XLATTICE/xlattice.h:27:0,
                 from /home/yz/XLATTICE/test.cc:1:
/home/yz/XLATTICE/field.h:6:7: note: ‘template<class T> class Field’ declared here
 class Field{
       ^~~~~
In file included from /home/yz/XLATTICE/xlattice.h:29:0,
                 from /home/yz/XLATTICE/test.cc:1:
/home/yz/XLATTICE/unary.h:83:45: error: expected initializer before ‘<’ token
 inline auto real(const Field<T>& U) -> Field<(decltype(real(U[0][0])))>
                                             ^
